# obb2D

./: .gitignore  CMakeLists.txt  README.md
include/: OBB.cpp  OBB.h  Vec2.cpp  Vec2.h
input/: input1.v
src/: main.cpp
